--- a/DashWallet/DashWallet/Base.lproj/buyDash.storyboard
+++ b/DashWallet/DashWallet/Base.lproj/buyDash.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BZs-Dv-J9R">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BZs-Dv-J9R">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -1709,9 +1709,6 @@ If you have any questions, there is a live chat window at wallofcoins.com or you
                                         <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                         <textInputTraits key="textInputTraits"/>
-                                        <connections>
-                                            <action selector="nextClicked:" destination="1Te-OB-Qe8" eventType="editingDidEnd" id="v4g-je-NoP"/>
-                                        </connections>
                                     </textField>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dropdown_icon" translatesAutoresizingMaskIntoConstraints="NO" id="gjW-zB-Lk4">
                                         <rect key="frame" x="390.5" y="99.5" width="13" height="13"/>
@@ -1734,7 +1731,7 @@ If you have any questions, there is a live chat window at wallofcoins.com or you
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
                                         <connections>
-                                            <action selector="nextClicked:" destination="1Te-OB-Qe8" eventType="touchUpInside" id="f7C-wd-z4X"/>
+                                            <action selector="nextStepClicked:" destination="1Te-OB-Qe8" eventType="touchUpInside" id="bsb-pa-do0"/>
                                         </connections>
                                     </button>
                                 </subviews>
